2005-05-19  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c (struct reference, printerr, compute_ref, new_reference,
	assemble): Added stack frame to reference.
	* z80asm.c (labelfilename, parse_commandline): Remove output files
	when compilation fails.
	* z80asm.c (use_force, parse_commandline, assemble, main): Implement
	--force.
	* z80asm.c (parse_commandline): Make a.bin the default target.
	* z80asm.c (check_label, rd_label, rd_value, rd_expr,
	get_include_name, assemble): Give errors about junk at end of
	line or expression.
	* z80asm.c (rd_value): Support double quotes for character constants.
	* z80asm.c (rd_expr_equal): Support = for equality.
	* z80asm.1: Updated manpage.

2005-05-18  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c (enum mnemonic, enum reftype, struct reference, struct
	label, struct stack, struct macro_arg, struct macro_line, struct
	macro, mnemonics, firstmacro, define_macro, sp, stack, readlabel,
	rd_expr, compute_ref, check_label, rd_label, rd_value, rd_factor,
	rd_term, rd_expr_shift, rd_expr_unequal, rd_expr_equal, rd_expr_and,
	rd_expr_xor, rd_expr_or, new_reference, wrt_ref, read_line,
	get_macro_args, assemble): Added macro support.
	* z80asm.c (rd_value): Added several radix notations.
	* examples/macro.asm: New file.

2005-05-17  Bas Wijnen  <shevek@fmf.nl>

	* Makefile (clean): Clean examples and headers.
	* Makefile (dist): Make versioned tarballs.
	* z80asm.c (buffer, try_use_real_file, flush_to_real_file,
	parse_commandline, assemble): Generalise writing to non-seekable
	files.
	* z80asm.c (reallistfile, parse_commandline, assemble): Use it for
	list file.
	* z80asm.c (read_line, assemble): Remove arbitrary line length limit.

2005-05-13  Bas Wijnen  <shevek@fmf.nl>

	* examples/Makefile, examples/hello.asm, headers/msx-bios.asm,
	headers/msx2-bios.asm, headers/msx2+-bios.asm,
	headers/msxturbor-bios.asm: New files.
	* z80asm.c (struct includedir, firstincludedir, open_include_file,