@@ -1,3 +1,11 @@
+2005-06-16  Bas Wijnen  <shevek@fmf.nl>
+
+	* Makefile: Fix incorrect version.
+	* z80asm.c (enum mnemonic, mnemonics, assemble), examples/hello.asm:
+	Rename bininclude to incbin.
+	* z80asm.c (readcommand, assemble), examples/macro.asm: Allow labels
+	before endm and endif.
+
 2005-05-19  Bas Wijnen  <shevek@fmf.nl>
 
 	* z80asm.c (struct reference, printerr, compute_ref, new_reference,
